load vars at start

--- a/sidebar.html
+++ b/sidebar.html
@@ -33,6 +33,7 @@
       $(function() {
         $('#run-reload').click(updateVars);
         $('#run-template').click(runTemplate);
+        updateVars();
       });
 
       /**
